--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,49 @@
-<h1>Mauro</h1>
+<section id="hero-section">
+  <h1>Welcome to CSE Motors!</h1>
+
+  <div class="hero-card">
+    <div class="hero-text">
+      <h2>DMC Delorean</h2>
+      <p>3 Cup holders<br>
+        Superman doors<br>
+        Fuzzy dice!</p>
+      <button class="action-button">Own Today</button>
+    </div>
+    <img src="/images/vehicles/delorean.jpg" alt="DMC Delorean Car">
+  </div>
+</section>
+
+<div class="data-wrapper">
+  <section class="reviews-container">
+    <h3>DMC Delorean Reviews</h3>
+    <ul>
+      <li>"So fast it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most futuristic ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+  </section>
+
+  <section class="upgrades-container">
+    <h3>Delorean Upgrades</h3>
+    <div class="upgrades-grid">
+      <article class="upgrade-item">
+        <div class="img-box"><img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor"></div>
+        <a href="#">Flux Capacitor</a>
+      </article>
+      <article class="upgrade-item">
+        <div class="img-box"><img src="/images/upgrades/flame.jpg" alt="Flame Decals"></div>
+        <a href="#">Flame Decals</a>
+      </article>
+      <article class="upgrade-item">
+        <div class="img-box"><img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers"></div>
+        <a href="#">Bumper Stickers</a>
+      </article>
+      <article class="upgrade-item">
+        <div class="img-box"><img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps"></div>
+        <a href="#">Hub Caps</a>
+      </article>
+    </div>
+  </section>
+</div>
