change card background color

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,7 +136,7 @@ body {
 }
 
 .upgrade-item {
-  background-color: #00a3cc;
+  background-color: #74e6ff;
   /* Color azul cian de la imagen */
   border: 1px solid #333;
   display: flex;
