--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,19 +29,19 @@
     <h3>Delorean Upgrades</h3>
     <div class="upgrades-grid">
       <article class="upgrade-item">
-        <div class="img-box"><img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor"></div>
+        <div class="img-box"><img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor icon"></div>
         <a href="#">Flux Capacitor</a>
       </article>
       <article class="upgrade-item">
-        <div class="img-box"><img src="/images/upgrades/flame.jpg" alt="Flame Decals"></div>
+        <div class="img-box"><img src="/images/upgrades/flame.jpg" alt="Flame Decals icon"></div>
         <a href="#">Flame Decals</a>
       </article>
       <article class="upgrade-item">
-        <div class="img-box"><img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers"></div>
+        <div class="img-box"><img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers icon"></div>
         <a href="#">Bumper Stickers</a>
       </article>
       <article class="upgrade-item">
-        <div class="img-box"><img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps"></div>
+        <div class="img-box"><img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps icon"></div>
         <a href="#">Hub Caps</a>
       </article>
     </div>
