--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -207,7 +207,7 @@ nav ul {
 }
 
 nav ul li {
-  color: white;
+  color: #dcdad7;
   /* Texto blanco sobre fondo oscuro */
   font-weight: bold;
   padding: 10px 5px;
@@ -253,13 +253,103 @@ footer {
   text-align: left;
 }
 
+#detail-display {
+  display: flex;
+  flex-direction: column;
+}
+
+#inv-display {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin: 20px;
+}
+
+#inv-display li {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fff;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#inv-display img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.namePrice {
+  padding: 10px;
+  background-color: #f9f9f9;
+}
+
+.vehicle-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.vehicle-detail img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.detail-info h2 {
+  color: #333;
+  margin-top: 0;
+}
+
+.price-tag {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #00a3cc;
+}
+
 /* --- DISEÑO DESKTOP (Lineamiento #9.d) --- */
 
 @media screen and (min-width: 800px) {
   .siteName {
     font-size: 2rem;
   }
-  
+
+  .vehicle-detail {
+    flex-direction: row;
+    /* Alineación horizontal */
+    align-items: flex-start;
+  }
+
+  .vehicle-detail img {
+    width: 50%;
+    /* La imagen ocupa la mitad */
+  }
+
+  .detail-info {
+    width: 50%;
+    /* La información ocupa la otra mitad */
+  }
+
+  #inv-display {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+
+  #detail-display {
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  #detail-display img {
+    width: 50%;
+  }
+
   .data-wrapper {
     flex-direction: row-reverse;
     /* Pone Reviews a la derecha y Upgrades a la izquierda */
