--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <section id="hero-section">
   <h1>Welcome to CSE Motors!</h1>
+  <%- messages() %>
 
   <div class="hero-card">
     <div class="hero-text">
