--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -19,7 +19,7 @@
           <% } %>
 
             <div class="login-container">
-              <form action="/account/login" method="post">
+              <form id="loginForm" action="/account/login" method="post">
                 <label for="accountEmail">Email Address:</label>
                 <input type="email" id="accountEmail" name="account_email" required
                   placeholder="Enter a valid email address" value="<%= locals.account_email %>">
