--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -7,3 +7,13 @@
     <a href="/inv/add-classification">Add New Classification</a>
     <a href="/inv/add-inventory">Add New Vehicle</a>
   </div>
+
+  <h2>Manage Inventory</h2>
+  <p>Select a classification to manage its vehicles.</p>
+
+  <%- classificationSelect %>
+  <table id="inventoryDisplay"></table>
+
+  <noscript>JavaScript must be enabled to use this page.</noscript>
+
+  <script src="../../js/inventory.js"></script>
