--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
   </span>
   <div id="tools">
     <% if (locals.loggedin) { %>
-      <a href="/account/">Welcome <%= locals.accountData.account_firstname %></a>
+      <a href="/account/" title="Click to view account management">Welcome <%= locals.accountData.account_firstname %> |</a>
       <a href="/account/logout" title="Click to log out">Logout</a>
       <% } else { %>
         <a href="/account/login" title="Click to log in">My Account</a>
